# django-ninja-admin

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG_OLD.md  LICENSE-DJANGO  PLAN.md  README.md  justfile  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
django_ninja_admin/: __init__.py  actions.py  apps.py  changelist.py  checks.py  constants.py  decorators.py  exceptions.py  filters.py  models.py  routes.py  schemas.py  sites.py
django_ninja_admin/admins/: auth.py  base.py  inline.py  model.py
django_ninja_admin/migrations/: 0001_initial.py  0002_alter_logentry_options_alter_logentry_managers.py
django_ninja_admin/utils/: deletion.py  flatten.py  flatten_fieldsets.py  form_schemas.py  format_error.py  forms.py  json_values.py  lookup.py  module_loading.py  quote.py  schema_constraints.py  schema_contracts.py  schema_examples.py
docs/: api-and-auth.md  contract-reference.md  copyright-audit.md  frontend-integration.md  hook-reference.md  index.md  migration-and-auth.md  parity-matrix.md  private-django-api-audit.md  release-checklist.md  setup.md  versioning.md
scripts/: dist_check.py  docs_check.py  generated_client_smoke.py  openapi_diff.py  openapi_snapshot.py  package_smoke.py  parity_report.py  private_django_api_audit.py  sample_project_full.py  sample_project_smoke.py  smoke_utils.py
tests/: conftest.py  custom_form_urls.py  custom_urls.py  settings.py  test_actions_bulk.py  test_admin_api.py  test_autocomplete.py  test_changelist_core.py  test_changelist_filters.py  test_checks.py  test_crud_routes.py  test_custom_forms.py  test_error_contracts.py  test_file_fields.py  test_form_descriptions.py  test_form_field_schemas.py  test_form_schemas.py  test_history.py  test_i18n.py  test_inlines.py  test_json_values.py  test_model_field_schemas.py  test_model_routes.py  test_openapi_contracts.py  test_openapi_diff.py  test_openapi_schema.py  test_package_contract.py  test_parity_report.py  test_permissions_auth.py  test_private_django_api_audit.py  test_schema_constraints.py  test_schema_customization.py  test_schema_examples.py  test_site.py  test_smoke_utils.py  test_throttling.py  urls.py
tests/golden/: openapi.json
tests/testapp/: admin.py  apps.py  models.py
tests/testapp/migrations/: 0001_initial.py  0002_productfeature.py
