[project]
name = "django-ninja-admin"
version = "0.1.70"
description = "A Ninja-native API implementation of Django admin for custom frontends."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Martijn Berger" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "django>=5.0,<6.1",
    "django-ninja>=1.6.2,<2",
    "pydantic>=2,<3",
]

[project.urls]
Repository = "https://github.com/martijnberger/django-ninja-admin"

[dependency-groups]
dev = [
    "mkdocs>=1.6",
    "pillow>=10.0",
    "pre-commit>=4.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-django>=4.8",
    "pyyaml>=6.0",
    "ruff>=0.6",
    "twine>=5.0",
    "ty>=0.0.56",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["django_ninja_admin"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["test_*.py", "*_tests.py"]

[tool.coverage.run]
source = ["django_ninja_admin"]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = true

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "PT", "DTZ", "RUF"]

[tool.ruff.lint.per-file-ignores]
"django_ninja_admin/migrations/*.py" = ["RUF012"]
"tests/**/*.py" = ["RUF012"]
